--- a/package.json
+++ b/package.json
@@ -8,14 +8,27 @@
     "mrmSharedUrl": "https://github.com/expertly-simple/mrm-shared.git"
   },
   "scripts": {
-    "pretest": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "npm run build && npm run build:test",
+    "test": "ts-node node_modules/jasmine/bin/jasmine --config=./jasmine.json",
     "shared:clean": "cross-conf-env rimraf shared && git rm -r --cached shared",
     "shared:init": "cross-conf-env git submodule add $npm_package_config_mrmSharedUrl shared",
     "postshared:init": "git submodule status shared",
     "modules:init": "git submodule update --init --recursive",
     "modules:update": "git submodule update --recursive --remote",
-    "build": "tsc -p tsconfig.src.json"
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.src.json",
+    "style": "import-sort -l \"{lib,tests}/**/*.ts\" && prettier --check \"{lib,tests}/**/*.ts\"",
+    "style:fix": "import-sort --write \"{lib,tests}/**/*.ts\" && prettier --write \"{lib,tests}/**/*.ts\"",
+    "lint": "tslint --config tslint.json --project .",
+    "lint:fix": "tslint --config tslint.json --fix --project .",
+    "prestart": "npm run build",
+    "start": "env-cmd node dist/index.js",
+    "build:test": "tsc -p tests/tsconfig.spec.json",
+    "prepublishOnly": "npm run test",
+    "prepare": "npm run build",
+    "test:ci": "ts-node ./node_modules/jasmine-xml-reporter/bin/jasmine.js --config=./jasmine.json --junitreport --output=test_results/",
+    "test:nyc": "nyc ts-node node_modules/jasmine/bin/jasmine --config=./jasmine.json --cache=false",
+    "init:env": "init-dev-env generate-dot-env example.env -f"
   },
   "repository": {
     "type": "git",
@@ -37,9 +50,37 @@
     "mrm-core": "^4.0.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@types/jasmine": "^3.5.0",
     "@types/node": "^12.12.21",
     "cross-conf-env": "^1.1.2",
+    "dev-norms": "^1.7.0",
+    "env-cmd": "^10.0.1",
+    "import-sort": "^6.0.0",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-parser-typescript": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
+    "init-dev-env": "^1.0.0",
+    "jasmine": "^3.5.0",
+    "jasmine-node": "^3.0.0",
+    "jasmine-xml-reporter": "^1.2.1",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^14.1.1",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-etc": "^1.10.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.7.3"
+  },
+  "importSort": {
+    ".ts, .tsx": {
+      "parser": "typescript",
+      "style": "module",
+      "options": {}
+    }
   }
 }
