--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "modules:update": "git submodule update --recursive --remote",
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.src.json",
-    "style": "import-sort -l \"{lib,tests}/**/*.ts\" && prettier --check \"{lib,tests}/**/*.ts\"",
-    "style:fix": "import-sort --write \"{lib,tests}/**/*.ts\" && prettier --write \"{lib,tests}/**/*.ts\"",
+    "style": "import-sort -l \"{src,tests}/**/*.ts\" && prettier --check \"{src,tests}/**/*.ts\"",
+    "style:fix": "import-sort --write \"{src,tests}/**/*.ts\" && prettier --write \"{src,tests}/**/*.ts\"",
     "lint": "tslint --config tslint.json --project .",
     "lint:fix": "tslint --config tslint.json --fix --project .",
     "prestart": "npm run build",
