--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mrm-task-typescript-vscode",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "description": "MRM task to configure VS Code and TypeScript projects with an optimized development experience",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -27,7 +27,7 @@
     "prepublishOnly": "npm run test",
     "prepare": "npm run build",
     "test:ci": "ts-node ./node_modules/jasmine-xml-reporter/bin/jasmine.js --config=./jasmine.json --junitreport --output=test_results/",
-    "test:nyc": "nyc ts-node node_modules/jasmine/bin/jasmine --config=./jasmine.json --cache=false",
+    "test:nyc": "nyc node_modules/ts-node/dist/bin.js node_modules/jasmine/bin/jasmine --config=./jasmine.json --cache=false",
     "init:env": "init-dev-env generate-dot-env example.env -f"
   },
   "repository": {
